Fix issue with nav being hidden by SVG

--- a/_sass/components/_components.Header.scss
+++ b/_sass/components/_components.Header.scss
@@ -19,7 +19,8 @@
     top: dp-spacing();
     left: dp-spacing();
     margin-top: 0;
-    margin-bottom: 0;    
+    margin-bottom: 0;
+    z-index: 1000;
   }
 }
 
