--- a/_sass/components/_components.Waves.scss
+++ b/_sass/components/_components.Waves.scss
@@ -2,4 +2,5 @@
   position: absolute;
   left: 0;
   bottom: -5px;
+  pointer-events: none;
 }
